Practicks/cpp/h/compiling_error.txt
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:7:3: error: ‘string’ does not name a type
   string name;//поле имени
   ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:8:3: error: ‘string’ does not name a type
   string surname;//поле фамилии
   ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:9:3: error: ‘string’ does not name a type
   string midname;//поле отчества
   ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:12:15: error: ‘string’ has not been declared
   void define(string n, string s, string m, int ma[5])//Изменяющий значения
               ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:12:25: error: ‘string’ has not been declared
   void define(string n, string s, string m, int ma[5])//Изменяющий значения
                         ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:12:35: error: ‘string’ has not been declared
   void define(string n, string s, string m, int ma[5])//Изменяющий значения
                                   ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h: In member function ‘void Student::define(int, int, int, int*)’:
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:14:4: error: ‘name’ was not declared in this scope
    name = n;
    ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:15:4: error: ‘surname’ was not declared in this scope
    surname = s;
    ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:16:4: error: ‘midname’ was not declared in this scope
    midname = m;
    ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h: In member function ‘void Student::display()’:
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:22:4: error: ‘cout’ was not declared in this scope
    cout << "Имя: " << name << "; Фамилия: " << surname << "; Отчество: " << midname << "; Оценки: " << endl;
    ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:22:26: error: ‘name’ was not declared in this scope
    cout << "Имя: " << name << "; Фамилия: " << surname << "; Отчество: " << midname << "; Оценки: " << endl;
                          ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:22:58: error: ‘surname’ was not declared in this scope
    cout << "Имя: " << name << "; Фамилия: " << surname << "; Отчество: " << midname << "; Оценки: " << endl;
                                                          ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:22:95: error: ‘midname’ was not declared in this scope
    cout << "Имя: " << name << "; Фамилия: " << surname << "; Отчество: " << midname << "; Оценки: " << endl;
                                                                                               ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:22:128: error: ‘endl’ was not declared in this scope
    cout << "Имя: " << name << "; Фамилия: " << surname << "; Отчество: " << midname << "; Оценки: " << endl;
                                                                                                                                ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h: At global scope:
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:30:3: error: ‘string’ does not name a type
   string name;//название группы
   ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:34:15: error: ‘string’ has not been declared
   void define(string n, int num)
               ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h: In member function ‘void Group_S::define(int, int)’:
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:36:4: error: ‘name’ was not declared in this scope
    name = n;
    ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:39:4: error: ‘string’ was not declared in this scope
    string na, s, m;
    ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:44:5: error: ‘cin’ was not declared in this scope
     cin.ignore();
     ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:45:5: error: ‘cout’ was not declared in this scope
     cout << "Введите имя студента" << endl;
     ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:45:57: error: ‘endl’ was not declared in this scope
     cout << "Введите имя студента" << endl;
                                                         ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:46:17: error: ‘na’ was not declared in this scope
     getline(cin,na);
                 ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:46:19: error: ‘getline’ was not declared in this scope
     getline(cin,na);
                   ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:48:18: error: ‘s’ was not declared in this scope
     getline(cin, s);
                  ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:50:18: error: ‘m’ was not declared in this scope
     getline(cin, m);
                  ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h: In member function ‘void Group_S::display()’:
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:58:5: error: ‘cout’ was not declared in this scope
     cout << "Название: " << name << "; Количество студентов: " << number << endl;
     ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:58:37: error: ‘name’ was not declared in this scope
     cout << "Название: " << name << "; Количество студентов: " << number << endl;
                                     ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:58:104: error: ‘endl’ was not declared in this scope
     cout << "Название: " << name << "; Количество студентов: " << number << endl;
                                                                                                        ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h: In function ‘void Programma3_2()’:
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:73:2: error: ‘string’ was not declared in this scope
  string n;
  ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:75:2: error: ‘cout’ was not declared in this scope
  cout << "Введите название группы" << endl;
  ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:75:60: error: ‘endl’ was not declared in this scope
  cout << "Введите название группы" << endl;
                                                            ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:76:10: error: ‘cin’ was not declared in this scope
  getline(cin, n);
          ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:76:15: error: ‘n’ was not declared in this scope
  getline(cin, n);
               ^
/home/dima/github/OOP/Practicks/cpp/h/Programm3_2.h:76:16: error: ‘getline’ was not declared in this scope
  getline(cin, n);
                ^
